tests/testfiles/validated/invalid_programs/606_invalid_declaration.c
int main()
{
    int a a;
    return 42;
}